# ave_starter

./: .gclient  .gitignore  .gn  BUILD.gn  DEPS  README.md  project.gni
.github/actions/install_env_and_download_code/: action.yml
.github/workflows/: another_docker_build_test.yml  build_and_test.yml  build_test.yml  format-check.yml  unittests.yml
build_overrides/: build.gni  gtest.gni
test/: BUILD.gn
