import("project.gni")

group("default") {
  testonly = true
  deps = [ ":project" ]
  deps += [ "//base/tracing" ]

  #  deps += [ "examples" ]
  if (ave_include_test) {
    deps += [
      "base:base_unittests",
      "media:media_unittests",
      "test",
    ]
  }
}

ave_library("project") {
  testonly = true
  sources = []

  defines = []
  deps = []

  deps += [ "//base" ]
}
